Unify error messages and add Troubleshooting section to docs (#4915)
<!-- Thanks for submitting a pull request! We appreciate you spending
the time to work on these changes. Please follow the template so that
the reviewers can easily understand what the code changes affect. -->

## Summary

Since version checker PR #4914 will add more error messages to
Reanimated and our Troubleshooting section in docs was almost
non-existent I decided to add a new one.

To make it consistent I made all errors thrown by Reanimated start with
`[Reanimated]` and prettified them a bit.

With this I made this tiny script `validate-urls.js` that scans our
source code to get valid (not so exotic) URLs and checks if they are
available.

## Test plan

CI

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -92,9 +92,7 @@ def resolveReactNativeDirectory() {
     }
 
     throw new GradleException(
-        "[Reanimated] Unable to resolve react-native location in " +
-        "node_modules. You should project extension property (in app/build.gradle) " +
-        "`REACT_NATIVE_NODE_MODULES_DIR` with path to react-native."
+        "[Reanimated] Unable to resolve react-native location in node_modules. You should project extension property (in `app/build.gradle`) `REACT_NATIVE_NODE_MODULES_DIR` with path to react-native."
     )
 }
 
@@ -109,7 +107,7 @@ def getPlaygroundAppName() { // only for the development
             }
         })
     } catch (_) {
-        throw new GradleException("Couldn't determine playground app name.")
+        throw new GradleException("[Reanimated] Couldn't determine playground app name.")
     }
     return playgroundAppName
 }
@@ -258,7 +256,7 @@ android {
         targetSdkVersion safeExtGet("targetSdkVersion", 30)
         versionCode 1
         versionName "1.0"
-        buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", IS_NEW_ARCHITECTURE_ENABLED.toString()
+        buildConfigField("boolean", "IS_NEW_ARCHITECTURE_ENABLED", IS_NEW_ARCHITECTURE_ENABLED.toString())
         externalNativeBuild {
             cmake {
                 arguments "-DANDROID_STL=c++_shared",
@@ -427,12 +425,7 @@ abstract class NoMultipleInstancesAssertionTask extends DefaultTask {
                 String parsedLocation = files.stream().map({
                     File file -> "- " + file.toString().replace("/package.json", "")
                 }).collect().join("\n")
-                String exceptionMessage = "\n[react-native-reanimated] Multiple versions of Reanimated " +
-                        "were detected. Only one instance of react-native-reanimated can be installed in a " +
-                        "project. You need to resolve the conflict manually. Check out the documentation: " +
-                        "https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/" +
-                        "troubleshooting#multiple-versions-of-reanimated-were-detected \n\nConflict " +
-                        "between: \n" + parsedLocation + "\n"
+                String exceptionMessage = "\n[Reanimated] Multiple versions of Reanimated were detected in `build.gradle`. See `https://docs.swmansion.com/react-native-reanimated/docs/guides/troubleshooting#multiple-versions-of-reanimated-were-detected-in-buildgradle` for more details.\n\nConflict between: \n" + parsedLocation + "\n"
                 throw new GradleException(exceptionMessage)
             }
         }
@@ -449,9 +442,7 @@ def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWit
     onlyIf { IS_NEW_ARCHITECTURE_ENABLED && REANIMATED_MAJOR_VERSION == 3 && REACT_NATIVE_MINOR_VERSION < 72 }
     doFirst {
         throw new GradleException(
-            "\n[react-native-reanimated] Reanimated " + REANIMATED_VERSION + " supports the New Architecture " +
-            "only on the latest minor release of React Native. Please upgrade to React Native 0.72.0+ " +
-            "or downgrade to an older version of Reanimated v3."
+            "\n[Reanimated] Outdated version of React Native for New Architecture. Reanimated " + REANIMATED_VERSION + " supports the New Architecture on React Native 0.72.0+. See https://docs.swmansion.com/react-native-reanimated/docs/guides/Troubleshooting#outdated-version-of-react-native-for-new-architecture for more information."
         )
     }
 }
@@ -716,7 +707,7 @@ if (REACT_NATIVE_MINOR_VERSION < 71) {
                     "${resolveBuildType()}.aar"
                 )
                 if (!hermesAAR.exists()) {
-                    throw new GradleException("Could not find hermes-engine AAR", null)
+                    throw new GradleException("[Reanimated] Could not find hermes-engine AAR.", null)
                 }
 
                 def soFiles = zipTree(hermesAAR).matching({ it.include "**/*.so" })
@@ -731,12 +722,12 @@ if (REACT_NATIVE_MINOR_VERSION < 71) {
             doLast {
                 def hermesPackagePath = findNodeModulePath(projectDir, "hermes-engine")
                 if (!hermesPackagePath) {
-                    throw new GradleException("Could not find the hermes-engine npm package", null)
+                    throw new GradleException("[Reanimated] Could not find the hermes-engine npm package.", null)
                 }
 
                 def hermesAAR = file("$hermesPackagePath/android/hermes-${resolveBuildType()}.aar") // e.g. hermes-debug.aar
                 if (!hermesAAR.exists()) {
-                    throw new GradleException("The hermes-engine npm package is missing \"android/hermes-${resolveBuildType()}.aar\"", null)
+                    throw new GradleException("[Reanimated] The hermes-engine npm package is missing \"android/hermes-${resolveBuildType()}.aar\".", null)
                 }
 
                 def soFiles = zipTree(hermesAAR).matching({ it.include "**/*.so" })
@@ -757,12 +748,12 @@ if (REACT_NATIVE_MINOR_VERSION < 71) {
             doLast {
                 def jscPackagePath = findNodeModulePath(projectDir, "jsc-android")
                 if (!jscPackagePath) {
-                    throw new GradleException("Could not find the jsc-android npm package", null)
+                    throw new GradleException("[Reanimated] Could not find the jsc-android npm package.", null)
                 }
 
                 def jscDist = file("$jscPackagePath/dist")
                 if (!jscDist.exists()) {
-                    throw new GradleException("The jsc-android npm package is missing its \"dist\" directory", null)
+                    throw new GradleException("[Reanimated] The jsc-android npm package is missing its \"dist\" directory.", null)
                 }
 
                 def jscAAR = fileTree(jscDist).matching({ it.include "**/android-jsc/**/*.aar" }).singleFile
@@ -938,6 +929,6 @@ afterEvaluate {
             extractSOFiles.dependsOn(prepareJSC)
         }
     } else {
-      throw GradleScriptException("Unknown JS runtime ${JS_RUNTIME}.")
+      throw GradleScriptException("[Reanimated] Unknown JS runtime ${JS_RUNTIME}.")
     }
 }
