Add missing env to MacOSExample

--- a/MacOSExample/ios/Podfile
+++ b/MacOSExample/ios/Podfile
@@ -1,6 +1,8 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+ENV['REANIMATED_EXAMPLE_APP_NAME'] = 'MacOSExample-ios'
+
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
