--- a/MacOSExample/macos/Podfile
+++ b/MacOSExample/macos/Podfile
@@ -1,6 +1,8 @@
 require_relative '../node_modules/react-native-macos/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+ENV['REANIMATED_EXAMPLE_APP_NAME'] = 'MacOSExample-macos'
+
 prepare_react_native_project!
 
 target 'MacOSExample-macOS' do
