--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build app
         working-directory: app
         run: yarn react-native run-ios
+        shell: bash
 
   build_android:
     runs-on: ubuntu-latest
