--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -33,8 +33,7 @@ jobs:
         run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios
-        shell: bash
+        run: npx react-native run-ios
 
   build_android:
     runs-on: ubuntu-latest
