--- a/MacOSExample/package.json
+++ b/MacOSExample/package.json
@@ -11,10 +11,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/slider": "^4.4.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-picker/picker": "^2.4.9",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
     "react-native": "0.71.12",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-macos": "^0.71.0-0",
-    "react-native-reanimated": "link:../"
+    "react-native-pager-view": "5.4.24",
+    "react-native-reanimated": "link:../",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.23.0",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
