--- a/MacOSExample/package.json
+++ b/MacOSExample/package.json
@@ -16,8 +16,9 @@
     "@react-native-community/slider": "^4.4.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.9",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
     "react-native": "0.71.12",
     "react-native-gesture-handler": "^2.12.0",
