--- a/android/build.gradle
+++ b/android/build.gradle
@@ -457,8 +457,15 @@ def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWit
 
 task prepareHeadersForPrefab(type: Copy) {
     from("$projectDir/src/main/cpp")
-    from("$projectDir/../Common/cpp")
-    include("**/*.h")
+    from("$projectDir/../Common/cpp/AnimatedSensor")
+    from("$projectDir/../Common/cpp/Fabric")
+    from("$projectDir/../Common/cpp/LayoutAnimations")
+    from("$projectDir/../Common/cpp/NativeModules")
+    from("$projectDir/../Common/cpp/ReanimatedRuntime")
+    from("$projectDir/../Common/cpp/Registries")
+    from("$projectDir/../Common/cpp/SharedItems")
+    from("$projectDir/../Common/cpp/Tools")
+    include("*.h")
     into(prefabHeadersDir)
 }
 
