--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -37,7 +37,7 @@ jobs:
         run: npx expo prebuild
       - name: Install Reanimated
         working-directory: app
-        run: npm install github:software-mansion/react-native-reanimated
+        run: npm install github:software-mansion/react-native-reanimated#${{ github.ref }}
       - name: Set Fabric
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
         run: node ${{ env.SCRIPT_PATH }} setupFabricIOS
