Export prefab only for RN > 68

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -249,8 +249,10 @@ android {
     }
 
     buildFeatures {
-        prefab true
-        prefabPublishing true
+        if (REACT_NATIVE_MINOR_VERSION > 68) {
+            prefab true
+            prefabPublishing true
+        }
     }
 
     prefab {
