Prevent GH actions trigger on forks

--- a/.github/workflows/build-nightly-npm-package.yml
+++ b/.github/workflows/build-nightly-npm-package.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   call-build-workflow-rea-v3:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     uses: ./.github/workflows/build-npm-package-action.yml
     with:
       version: nightly
