--- a/.github/workflows/check-TS-react-native.yml
+++ b/.github/workflows/check-TS-react-native.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   run:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     strategy:
       matrix:
