--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -30,6 +30,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: macos-12
     strategy:
       matrix:
