--- a/.github/workflows/validate-cpp.yml
+++ b/.github/workflows/validate-cpp.yml
@@ -23,6 +23,7 @@ on:
 
 jobs:
   lint:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     name: cpplint
     runs-on: ubuntu-latest
     strategy:
