--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,6 +26,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     strategy:
       matrix:
