--- a/.github/workflows/build-monorepo-action.yml
+++ b/.github/workflows/build-monorepo-action.yml
@@ -20,6 +20,7 @@ env:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ${{ inputs.platform == 'iOS' && 'macos-12' || 'ubuntu-latest' }}
     concurrency:
       group: ${{ inputs.concurrency_group }}
@@ -44,7 +45,7 @@ jobs:
       - name: Install dependencies for PackageApp
         working-directory: monorepo/packages/PackageApp
         run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
-      
+
       - name: Setup hoisted Reanimated
         if: ${{ inputs.is_hoisted }}
         working-directory: monorepo
