--- a/.github/workflows/build-on-windows-nightly.yml
+++ b/.github/workflows/build-on-windows-nightly.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: windows-latest
     concurrency:
       group: build-on-windows-${{ github.ref }}
