--- a/.github/workflows/build-release-npm-package-rea2.yml
+++ b/.github/workflows/build-release-npm-package-rea2.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   call-build-workflow-rea-v2:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     uses: ./.github/workflows/build-npm-package-action.yml
     with:
       version: release
