--- a/.github/workflows/build-v8-nightly.yml
+++ b/.github/workflows/build-v8-nightly.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     concurrency:
       group: build-v8-${{ github.ref }}
