--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -12,6 +12,7 @@ env:
 
 jobs:
   build_ios:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: macos-12
     strategy:
       matrix:
@@ -49,6 +50,7 @@ jobs:
         run: yarn react-native run-ios --simulator='iPhone 14'
 
   build_android:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     strategy:
       matrix:
