--- a/.github/workflows/check-static-framework-nightly.yml
+++ b/.github/workflows/check-static-framework-nightly.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: macos-12
     strategy:
       matrix:
