--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     env:
       WORKING_DIRECTORY: docs
