--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: macos-12
     env:
       WORKING_DIRECTORY: MacOSExample
