--- a/.github/workflows/tvos-build.yml
+++ b/.github/workflows/tvos-build.yml
@@ -24,6 +24,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: macos-12
     env:
       WORKING_DIRECTORY: TVOSExample
