--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "format:docs": "cd docs && yarn format && cd ..",
     "find-unused-code:js": "yarn ts-prune --ignore \"index|.web.\" --error  ",
     "type:check": "yarn tsc --noEmit && cd plugin && yarn type:check && cd ..",
-    "type:check-api": "yarn tsc --noEmit --target es6 --module ESNext --jsx react-native --skipLibCheck true --allowSyntheticDefaultImports true --moduleResolution node --esModuleInterop true --strict true --forceConsistentCasingInFileNames true --resolveJsonModule true app/src/App.tsx __typetests__/react-native-reanimated-tests.tsx",
+    "type:run-test": "yarn tsc --noEmit --target es6 --module ESNext --jsx react-native --skipLibCheck true --allowSyntheticDefaultImports true --moduleResolution node --esModuleInterop true --strict true --forceConsistentCasingInFileNames true --resolveJsonModule",
+    "type:check:app": "yarn type:run-test app/src/App.tsx",
+    "type:check:tests:common": "yarn type:run-test __typetests__/common.tsx",
+    "type:check:tests:0.72+": "yarn type:run-test __typetests__/0.72+.tsx",
+    "type:check:all": "yarn type:check:app && yarn type:check:tests-common && yarn type:check:tests-0.72+",
     "prepare": "yarn plugin && bob build && husky install && yarn app",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
@@ -148,7 +152,7 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-native": "0.72.3",
+    "react-native": "0.71",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-macos": "^0.71.0-0",
