--- a/android/build.gradle
+++ b/android/build.gradle
@@ -249,8 +249,10 @@ android {
     }
 
     buildFeatures {
-        prefab true
-        prefabPublishing true
+        if (REACT_NATIVE_MINOR_VERSION > 68) {
+            prefab true
+            prefabPublishing true
+        }
     }
 
     prefab {
@@ -373,25 +375,11 @@ android {
                 }
             }
 
-            // UIImplementation
-            if (REACT_NATIVE_MINOR_VERSION <= 64) {
-                srcDirs += "src/reactNativeVersionPatch/UIImplementation/64"
-            } else {
-                srcDirs += "src/reactNativeVersionPatch/UIImplementation/latest"
-            }
-
             // ReanimatedUIManager & ReanimatedUIImplementation 
             if (REACT_NATIVE_MINOR_VERSION <= 70) {
                 srcDirs += "src/reactNativeVersionPatch/ReanimatedUIManager/70"
             } else {
                 srcDirs += "src/reactNativeVersionPatch/ReanimatedUIManager/latest"
-            }
-
-            // nativeHierarchyManager
-            if (REACT_NATIVE_MINOR_VERSION <= 62) {
-                srcDirs += "src/reactNativeVersionPatch/nativeHierarchyManager/62"
-            } else {
-                srcDirs += "src/reactNativeVersionPatch/nativeHierarchyManager/latest"
             }
         }
     }
@@ -450,8 +438,15 @@ def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWit
     onlyIf { IS_NEW_ARCHITECTURE_ENABLED && REANIMATED_MAJOR_VERSION == 3 && REACT_NATIVE_MINOR_VERSION < 72 }
     doFirst {
         throw new GradleException(
-            "\n[Reanimated] Outdated version of React Native for New Architecture. Reanimated " + REANIMATED_VERSION + " supports the New Architecture on React Native 0.72.0+. See https://docs.swmansion.com/react-native-reanimated/docs/guides/Troubleshooting#outdated-version-of-react-native-for-new-architecture for more information."
+            "[Reanimated] Outdated version of React Native for New Architecture. Reanimated " + REANIMATED_VERSION + " supports the New Architecture on React Native 0.72.0+. See https://docs.swmansion.com/react-native-reanimated/docs/guides/Troubleshooting#outdated-version-of-react-native-for-new-architecture for more information."
         )
+    }
+}
+
+def assertMinimalReactNativeVersion = task assertMinimalReactNativeVersionTask {
+    onlyIf { REACT_NATIVE_MINOR_VERSION < 66 }
+    doFirst {
+        throw new GradleException("[Reanimated] Unsupported React Native version. Please use 0.66 or newer.")
     }
 }
 
@@ -470,7 +465,7 @@ task prepareHeadersForPrefab(type: Copy) {
 }
 
 tasks.preBuild {
-    dependsOn assertNoMultipleInstances, assertLatestReactNativeWithNewArchitecture
+    dependsOn assertNoMultipleInstances, assertLatestReactNativeWithNewArchitecture, assertMinimalReactNativeVersion
 }
 
 task cleanCmakeCache() {
@@ -864,9 +859,6 @@ if (REACT_NATIVE_MINOR_VERSION < 71) {
 task packageNdkLibs(type: Copy) {
     from("$buildDir/reanimated-ndk/all")
     include("**/libreanimated.so")
-    if(REACT_NATIVE_MINOR_VERSION < 64) {
-        include("**/libturbomodulejsijni.so")
-    }
     into("$projectDir/src/main/jniLibs")
 }
 
