--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "format:common": "find Common/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "format:docs": "cd docs && yarn format && cd ..",
     "find-unused-code:js": "yarn ts-prune --ignore \"index|.web.\" --error  ",
-    "type:check": "yarn tsc --noEmit && cd plugin && yarn type:check && cd ..",
-    "type:run-test": "yarn tsc --noEmit --target es6 --module ESNext --jsx react-native --skipLibCheck true --allowSyntheticDefaultImports true --moduleResolution node --esModuleInterop true --strict true --forceConsistentCasingInFileNames true --resolveJsonModule",
-    "type:check:app": "yarn type:run-test app/src/App.tsx",
-    "type:check:tests:common": "yarn type:run-test __typetests__/common.tsx",
-    "type:check:tests:0.72+": "yarn type:run-test __typetests__/0.72+.tsx",
-    "type:check:all": "yarn type:check:app && yarn type:check:tests:common && yarn type:check:tests:0.72+",
+    "type:check:src": "yarn tsc --noEmit",
+    "type:check:plugin": "cd plugin && yarn type:check:src && cd ..",
+    "type:check:app": "./scripts/test-ts.sh app/src/App.tsx",
+    "type:check:tests:common": "./scripts/test-ts.sh __typetests__/common.tsx",
+    "type:check:tests:0.72+": "./scripts/test-ts.sh __typetests__/0.72+.tsx",
+    "type:check:all": "yarn type:check:src && yarn type:check:plugin && ./scripts/test-ts.sh app/src/App.tsx __typetests__/common.tsx __typetests__/0.72+.tsx",
     "prepare": "yarn plugin && bob build && husky install && yarn app",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
