--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -26,9 +26,7 @@ jobs:
       - name: Install node dependencies
         run: yarn
       - name: Check types
-        run: yarn tsc --noEmit
-      - name: Check api
-        run: yarn type:check-api
+        run: yarn type:check:all
       - name: Lint
         run: yarn lint:js
       - name: Find unused code
