added React Native with Expo modules on Workflow options (#5062)
this option/variant was missing from `bug-report.yml`

---------

Co-authored-by: Efstathios Ntonas <stathis@hikiapp.com>
Co-authored-by: Tomasz Żelawski <40713406+tjzel@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -104,11 +104,11 @@ body:
     id: workflow
     attributes:
       label: Workflow
-      description: How your application is managed? Not sure? Read [this part](https://docs.expo.dev/introduction/managed-vs-bare/) of Expo documentation
+      description: How is your application managed?
       options:
-        - React Native (without Expo)
-        - Expo bare workflow
-        - Expo managed workflow
+        - React Native 
+        - Expo Go
+        - Expo Dev Client
 
   - type: dropdown
     id: architecture
