--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -20,9 +20,9 @@ jobs:
     steps:
       - name: Create app
         run: npx react-native init app --skip-install --version nightly
-      - name: Install Reanimated
-        working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
+      # - name: Install Reanimated
+        # working-directory: app
+        # run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
       - name: Install Paper Pods
         if: ${{ matrix.react-native-architecture == 'Paper' }}
         working-directory: app/ios
