--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -19,7 +19,8 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Create app
-        run: npx react-native init app --skip-install --version nightly
+        run: npx react-native init app --version nightly
+        # run: npx react-native init app --skip-install --version nightly
       # - name: Install Reanimated
         # working-directory: app
         # run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
