--- a/MacOSExample/package.json
+++ b/MacOSExample/package.json
@@ -20,9 +20,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
-    "react-native": "0.71.12",
+    "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.0",
-    "react-native-macos": "^0.71.0-0",
+    "react-native-macos": "^0.72.0",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.6.3",
@@ -33,6 +33,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native/metro-config": "^0.72.9",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
