--- a/MacOSExample/tsconfig.json
+++ b/MacOSExample/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "react-native-reanimated": ["../"],
+      "react": ["./node_modules/@types/react"]
+    }
+  },
+  "exclude": []
 }
