--- a/NextExample/tsconfig.json
+++ b/NextExample/tsconfig.json
@@ -20,5 +20,11 @@
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
   ]
 }
