Use linked reanimated

--- a/NextExample/package.json
+++ b/NextExample/package.json
@@ -12,7 +12,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-reanimated": "3.5.2",
+    "react-native-reanimated": "link:../",
     "react-native-web": "^0.18.9"
   },
   "devDependencies": {
