--- a/.github/workflows/build-next-example.yml
+++ b/.github/workflows/build-next-example.yml
@@ -29,3 +29,7 @@ jobs:
       - name: Compile production build
         working-directory: NextExample
         run: yarn build
+
+      - name: Run e2e tests
+        working-directory: NextExample
+        run: yarn e2e:headless
