--- a/NextExample/package.json
+++ b/NextExample/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
     "expo": "~48.0.10",
@@ -15,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@expo/next-adapter": "^5.0.2"
+    "@expo/next-adapter": "^5.0.2",
+    "cypress": "^13.2.0",
+    "start-server-and-test": "^2.0.1"
   }
 }
