--- a/.github/workflows/detect-broken-urls-nightly.yml
+++ b/.github/workflows/detect-broken-urls-nightly.yml
@@ -13,7 +13,9 @@ jobs:
     if: github.repository == 'software-mansion/react-native-reanimated'
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn add node-fetch
       - name: Detect broken urls
         run: node scripts/detect-broken-urls.js
