--- a/.github/workflows/detect-broken-urls-nightly.yml
+++ b/.github/workflows/detect-broken-urls-nightly.yml
@@ -1,4 +1,4 @@
-name: Detect broken urls in source code
+name: Validate urls in source code
 on:
   pull_request:
     paths:
@@ -17,5 +17,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn add node-fetch
-      - name: Detect broken urls
-        run: node scripts/detect-broken-urls.js
+      - name: Validate urls
+        run: node scripts/validate-urls.js
