--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -3,8 +3,8 @@ name: Build npm package
 on:
   workflow_call:
     inputs:
-      version:
-        required: true
+      option:
+        required: false
         type: string
       ref:
         required: false
@@ -53,7 +53,7 @@ jobs:
         env:
           ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: >-
-          ./createNPMPackage.sh ${{ inputs.version }} 2> build.log
+          ./createNPMPackage.sh ${{ inputs.option }} 2> build.log
 
       - name: Check if any node_modules were packed
         id: node_modules
