--- a/android/build.gradle
+++ b/android/build.gradle
@@ -381,7 +381,7 @@ android {
 def assertLatestReactNativeWithNewArchitecture = task assertLatestReactNativeWithNewArchitectureTask {
     onlyIf { IS_NEW_ARCHITECTURE_ENABLED && REANIMATED_MAJOR_VERSION == 3 && REACT_NATIVE_MINOR_VERSION < 72 }
     doFirst {
-        // If you change the minimal react native version remember to update docs (troubleeshooting section)
+        // If you change the minimal React Native version remember to update Compatibility Table in docs
         throw new GradleException(
             "[Reanimated] Outdated version of React Native for New Architecture. Reanimated " + REANIMATED_VERSION + " supports the New Architecture on React Native 0.72.0+. See https://docs.swmansion.com/react-native-reanimated/docs/guides/troubleshooting#outdated-version-of-react-native-for-new-architecture for more information."
         )
