Run only plugin tests in validate plugin workflow

--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -49,4 +49,4 @@ jobs:
         if: failure() && steps.diff.outcome == 'failure'
         run: git diff
       - name: Test
-        run: yarn jest
+        run: yarn jest plugin
