--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "scripts/reanimated_utils.rb",
     "mock.js",
     "plugin/index.js",
-    "plugin/build/",
+    "plugin/build/plugin.js",
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__",
