--- a/.github/workflows/validate-cpp.yml
+++ b/.github/workflows/validate-cpp.yml
@@ -46,3 +46,7 @@ jobs:
       - name: Run cpplint
         run: |
           scripts/cpplint.sh
+
+      - name: Disallow DEBUG macros
+        run: |
+          egrep -r '(#if DEBUG|#ifdef DEBUG)' android/src/main/cpp common/Cpp || exit 1
