--- a/NextExample/package.json
+++ b/NextExample/package.json
@@ -3,10 +3,11 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "build:analyze": "ANALYZE=1 next build",
+    "build:disable-minification": "DISABLE_MINIFICATION=1 next build",
     "start": "next start",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
-    "analyze": "ANALYZE=true next build"
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
     "expo": "~48.0.10",
