--- a/NextExample/package.json
+++ b/NextExample/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "build:analyze": "ANALYZE=1 next build",
+    "build:analyze": "ANALYZE_BUNDLE=1 next build",
     "build:disable-minification": "DISABLE_MINIFICATION=1 next build",
     "start": "next start",
     "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
