--- a/.github/workflows/build-v8-nightly.yml
+++ b/.github/workflows/build-v8-nightly.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           path: 'reanimated_repo'
       - name: Create React Native app
-        run: npx react-native init app
+        run: npx react-native@12.0.0-alpha.18 init app
       - name: Install dependencies
         working-directory: app
         run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }} react-native-v8 v8-android-jit
