--- a/.github/workflows/check-react-native-nightly.yml
+++ b/.github/workflows/check-react-native-nightly.yml
@@ -20,7 +20,7 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Create app
-        run: npx react-native init app --version nightly
+        run: npx react-native@12.0.0-alpha.18 init app --version 0.73.0-rc.2
         # run: npx react-native init app --skip-install --version nightly
       # - name: Install Reanimated
         # working-directory: app
@@ -54,7 +54,7 @@ jobs:
           distribution: 'zulu'
           java-version: '18'
       - name: Create app
-        run: npx react-native init app --skip-install --version nightly
+        run: npx react-native@12.0.0-alpha.18 init app --skip-install --version 0.73.0-rc.2
       - name: Install Reanimated
         working-directory: app
         run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
