--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -54,7 +54,7 @@ jobs:
         env:
           ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: >-
-          ./createNPMPackage.sh ${{ inputs.option }}
+          ./createNPMPackage.sh ${{ inputs.option }} 2> build.log
 
       - name: Check if any node_modules were packed
         id: node_modules
@@ -67,7 +67,7 @@ jobs:
         run: grep --silent -E "npm notice package size:\s*[0-9][0-9]?[0-9]?(\.[0-9]*)?\s*kB" build.log
 
       - name: Show build log
-        if: failure()
+        if: failure() && steps.build.outcome == 'failure'
         run: >-
           cat build.log
 
