--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .DS_Store
 
 # Xcode
-build/
+apple/build
+ios/build
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -21,6 +22,7 @@ DerivedData
 project.xcworkspace
 
 # Android/IJ
+android/build
 *.iml
 .idea
 .gradle
@@ -56,5 +58,5 @@ react-native-reanimated-tests.js
 *.settings**
 
 # plugin
-!plugin/build/plugin.js
+plugin/build/plugin.js.map
 plugin/types
