Modify `package.json` and `babel.config.json`

--- a/NextExample/package.json
+++ b/NextExample/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "REANIMATED_BABEL_PLUGIN_IS_WEB=1 next",
-    "build": "REANIMATED_BABEL_PLUGIN_IS_WEB=1 next build",
+    "dev": "next",
+    "build": "next build",
     "build:analyze": "ANALYZE_BUNDLE=1 yarn build",
     "build:disable-minification": "DISABLE_MINIFICATION=1 yarn build",
     "start": "next start",
