--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --web",
-    "start:noplugin": "yarn start",
+    "start:noplugin": "DISABLE_BABEL_PLUGIN=1 yarn start",
     "lint": "eslint --max-warnings=0 .",
     "build": "expo export:web"
   },
