--- a/Example/ios/ReanimatedExample/Info.plist
+++ b/Example/ios/ReanimatedExample/Info.plist
@@ -64,6 +64,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
