Update CI config

--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -47,7 +47,7 @@ jobs:
         run: pod install
       - name: Build app
         working-directory: app
-        run: yarn react-native run-ios --simulator='iPhone 14'
+        run: yarn react-native run-ios
 
   build_android:
     if: github.repository == 'software-mansion/react-native-reanimated'
